<resources>
    <string name="app_name">DocuX</string>
    <string name="input_email_login">Nhập Email</string>
    <string name="input_password_login">Nhập password</string>
    <string name="input_email_register">Nhập Email đăng ký</string>
    <string name="input_password_register">Nhập password </string>
    <string name="login_title">Đăng nhập</string>
    <string name="fblogin">Đăng nhập Facebook</string>
    <string name="lostpass">Quên mật khẩu</string>
    <string name="register_new">Đăng ký mới</string>
    <string name="register_account">Đăng ký tài khoản</string>
    <string name="backtologin">Quay lại</string>
    <string name="note_register">Vui lòng đăng ký với email mà bạn sử dụng để xác nhận và tránh các sự cố về tài khoản!</string>
    <string name="register_account_fb">Đăng ký bằng Facebook</string>
    <string name="email_error">Email không đúng định dạng</string>
    <string name="email_verification">Vui lòng truy cập email để xác thực tài khoản</string>
    <string name="login_success">Đăng nhập thành công</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="search">Tìm kiếm...</string>
    <string name="title_activity_main">DocuX</string>
    <string name="upload_post">Đăng bài</string>
    <string name="runtime_permissions_code">Please enable ALL permissions from app settings.</string>
    <string name="up_post_date">Đăng ngày: </string>
    <string name="date_format">dd-MM-yyyy (HH:mm:ss)</string>
    <string name="latest_status">Các bài đăng mới nhất</string>
    <string name="search_status">Kết quả tìm kiếm</string>
    <string name="user_post_status">Các bài đăng của bạn</string>
    <string name="reset_password_text">Vui lòng truy cập email để đổi lại mật khẩu</string>
    <string name="not_allow">Bạn không thể xóa bài đăng của người khác</string>
    <string name="postid">postId</string>
    <string name="commentid">commentId</string>
    <string name="post">post</string>
    <string name="user">user</string>
    <string name="userId">userId</string>
    <string name="action_search">Tìm kiếm</string>
    <string name="action_refresh">Refresh</string>
    <string name="no_file">Không có file đính kèm</string>
</resources>
