<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_content"
    tools:context="hust.trinhnd.myappstore.activity.LoginActivity">

    <LinearLayout
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <ImageView
            android:id="@+id/img_logo"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:src="@drawable/astralis_logo" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/layout"
        android:layout_below="@id/logo"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/activity_vertical_margin">


        <android.support.design.widget.TextInputLayout
            android:id="@+id/tv_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/padding_content">

            <EditText
                android:id="@+id/edt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:hint="@string/input_email_login"
                android:inputType="textEmailSubject"
                android:textSize="@dimen/normal_text" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tv_input2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/padding_content">

            <EditText
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_password_login"
                android:inputType="textPassword"
                android:textSize="@dimen/normal_text" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:background="@color/home_color"
            android:text="@string/login_title"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btn_fb_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_content"
            android:background="@color/com_facebook_blue"
            android:text="@string/fblogin"
            android:textColor="@color/white" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:background="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_go_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:text="@string/register_new"
                android:textAllCaps="false"
                android:textColor="#000" />

            <View
                android:layout_width="1dp"
                android:layout_height="fill_parent"
                android:layout_margin="@dimen/padding_content"
                android:background="@color/black" />

            <Button
                android:id="@+id/btn_lost_pass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:text="@string/lostpass"
                android:textAllCaps="false"
                android:textColor="@color/black" />
        </LinearLayout>
    </LinearLayout>


</RelativeLayout>
